chore: commit current workspace changes